@@ -1,7 +1,7 @@
 # Important Notes:
 # Every field you add must be added to the root build.gradle expandProps map.
 # Project
-version=2.0.0-beta.1
+version=2.0.0-beta.2
 group=com.github.iunius118.chilibulletweapons
 java_version=21
 
